--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -7,11 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/css/stellar.css" />
+    <link rel="stylesheet" href="/js/external/stellar/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/settings.css" />
-    <noscript
-      ><link rel="stylesheet" href="/css/stellar-noscript.css"
-    /></noscript>
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -94,10 +92,10 @@
 
     <!-- Scripts -->
     <script src="/js/external/jquery/jquery.min.js"></script>
-    <script src="/js/external/ajlkn/jquery.scrollex.min.js"></script>
-    <script src="/js/external/ajlkn/jquery.scrolly.min.js"></script>
-    <script src="/js/external/ajlkn/browser.min.js"></script>
-    <script src="/js/external/ajlkn/breakpoints.min.js"></script>
+    <script src="/js/external/stellar/jquery.scrollex.min.js"></script>
+    <script src="/js/external/stellar/jquery.scrolly.min.js"></script>
+    <script src="/js/external/stellar/browser.min.js"></script>
+    <script src="/js/external/stellar/breakpoints.min.js"></script>
     <script src="/js/external/stellar/util.js"></script>
     <script src="/js/external/stellar/main.js"></script>
     <script src="/js/settings.js"></script>
