Increase color contrast, fix other accessibility issues

--- a/public/html/licenses.html
+++ b/public/html/licenses.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Robinhood Mint Sync for Chrome - Licenses</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
   </head>
@@ -22,18 +18,18 @@
       <!-- Nav -->
       <nav id="nav">
         <ul>
-          <li><a href="#first" class="active">Extension License</a></li>
-          <li><a href="#second">Components by ajlkn License</a></li>
-          <li><a href="#third">jQuery License</a></li>
-          <li><a href="#fourth">NOTY License</a></li>
-          <li><a href="#fifth">Stellar Theme License</a></li>
+          <li><a href="#extension" class="active">Extension License</a></li>
+          <li><a href="#ajlkn">Components by ajlkn License</a></li>
+          <li><a href="#jquery">jQuery License</a></li>
+          <li><a href="#noty">NOTY License</a></li>
+          <li><a href="#stellar">Stellar Theme License</a></li>
           <li><a href="#other">Other Licenses</a></li>
         </ul>
       </nav>
 
       <!-- Main -->
-      <div id="main">
-        <section id="first" class="main">
+      <main id="main">
+        <section id="extension" class="main">
           <header class="major">
             <h2>Robinhood Mint Sync for Chrome License</h2>
           </header>
@@ -67,7 +63,7 @@
             </li>
           </ul>
         </section>
-        <section id="second" class="main">
+        <section id="ajlkn" class="main">
           <header class="major">
             <h2>Components by ajlkn</h2>
             <i
@@ -105,7 +101,7 @@
             </li>
           </ul>
         </section>
-        <section id="third" class="main">
+        <section id="jquery" class="main">
           <header class="major">
             <h2><a href="https://jquery.org/license">jQuery License</a></h2>
           </header>
@@ -144,7 +140,7 @@
           </ul>
         </section>
 
-        <section id="fourth" class="main">
+        <section id="noty" class="main">
           <header class="major">
             <h2>
               <a href="https://github.com/needim/noty/blob/master/LICENSE.txt"
@@ -183,7 +179,7 @@
           </ul>
         </section>
 
-        <section id="fifth" class="main">
+        <section id="stellar" class="main">
           <header class="major">
             <h2>
               <a href="https://html5up.net/stellar">Stellar Theme</a> by
@@ -583,7 +579,7 @@
             <a href="https://www.npmjs.com/">NPM</a>.
           </p>
         </section>
-      </div>
+      </main>
 
       <!-- Footer -->
       <footer id="footer"></footer>
