--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Robinhood Mint Sync for Chrome - Settings</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/settings.css" />
@@ -29,7 +25,7 @@
       </nav>
 
       <!-- Main -->
-      <div id="main">
+      <main id="main">
         <section id="welcome" class="main">
           <header class="major">
             <h2>Changelog</h2>
@@ -80,7 +76,7 @@
           />
           <label for="setting-debugMode">Debug Mode</label>
         </section>
-      </div>
+      </main>
 
       <!-- Footer -->
       <footer id="footer">
