--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Robinhood Mint Sync for Chrome - Welcome</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
   </head>
@@ -27,14 +23,14 @@
       <nav id="nav">
         <ul>
           <li><a href="#intro" class="active">Welcome</a></li>
-          <li><a href="#first">How to use</a></li>
-          <li><a href="#second">FAQs</a></li>
-          <li><a href="#cta">Reporting a Problem</a></li>
+          <li><a href="#how-to-use">How to use</a></li>
+          <li><a href="#faqs">FAQs</a></li>
+          <li><a href="#report-problem">Reporting a Problem</a></li>
         </ul>
       </nav>
 
       <!-- Main -->
-      <div id="main">
+      <main id="main">
         <!-- Introduction -->
         <section id="intro" class="main special">
           <div class="spotlight">
@@ -70,8 +66,8 @@
           </div>
         </section>
 
-        <!-- First Section -->
-        <section id="first" class="main">
+        <!-- how-to-use Section -->
+        <section id="how-to-use" class="main">
           <header class="major">
             <h2>How to use the extension</h2>
           </header>
@@ -107,8 +103,8 @@
           </footer>
         </section>
 
-        <!-- Second Section -->
-        <section id="second" class="main">
+        <!-- faqs Section -->
+        <section id="faqs" class="main">
           <header class="major">
             <h2>Frequently Asked Questions</h2>
           </header>
@@ -126,7 +122,7 @@
             into Mint, it is possible for changes in either of these services to
             break the functionality of the extension. If you have any issues
             with the extension, see the
-            <a href="#cta">Reporting a Problem</a> section below.
+            <a href="#report-problem">Reporting a Problem</a> section below.
           </p>
           <h2>How do I know my information is safe?</h2>
           <p>
@@ -140,7 +136,7 @@
         </section>
 
         <!-- Get Started -->
-        <section id="cta" class="main">
+        <section id="report-problem" class="main">
           <header class="major">
             <h2>Reporting a Problem</h2>
           </header>
@@ -166,7 +162,7 @@
             </ul>
           </footer>
         </section>
-      </div>
+      </main>
 
       <!-- Footer -->
       <footer id="footer">
