--- a/index.html
+++ b/index.html
@@ -1,35 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Robinhood Mint Sync for Chrome</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="css/stellar.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="external/stellar/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="icon" type="image/png" href="images/icon128.png" />
-    <noscript
-      ><link rel="stylesheet" href="css/stellar-noscript.css"
-    /></noscript>
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <span class="logo"
-          ><img src="images/icon512.png" style="width: 128px" alt=""
-        /></span>
+        <span class="logo"><img src="images/icon512.png" style="width: 128px" alt="" /></span>
         <h1>Robinhood Mint Sync for Chrome</h1>
         <p>Add your Robinhood portfolio value to Mint automatically.</p>
         <ul class="actions special">
           <li>
-            <a
-              href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo"
-              class="button"
-              >Add to Chrome</a
-            >
+            <a href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo" class="button">Add to Chrome</a>
           </li>
         </ul>
       </header>
@@ -46,7 +35,7 @@
       </nav>
 
       <!-- Main -->
-      <div id="main">
+      <main id="main">
         <!-- Introduction -->
         <section id="intro" class="main">
           <div class="spotlight">
@@ -54,20 +43,13 @@
               <header class="major">
                 <h2>Installation</h2>
               </header>
-              <a
-                style="border: none"
-                href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo"
-                ><img
-                  src="images/ChromeWebStore_Badge.svg"
-                  style="width: 300px; max-width: 100%"
-                  alt="Available in the Chrome Web Store badge"
+              <a style="border: none" href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo"
+                ><img src="images/chrome-web-store.png" style="width: 300px; max-width: 100%" alt="Available in the Chrome Web Store badge"
               /></a>
               <p>The extension is offered thorugh the Chrome Web Store.</p>
               <ul class="actions">
                 <li>
-                  <a
-                    href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo"
-                    class="button primary"
+                  <a href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo" class="button primary"
                     >Add to Chrome</a
                   >
                 </li>
@@ -83,15 +65,10 @@
                 <h2>Contributing to the Extension</h2>
               </header>
               <p>
-                The extension is open-source, so if you are interested in
-                contributing to it check it out on GitHub.<br />If you aren't a
-                coder, you can show your support for the extension by donating.
+                The extension is open-source, so if you are interested in contributing to it check it out on GitHub.<br />If you aren't a coder, you can show
+                your support for the extension by donating.
               </p>
-              <form
-                action="https://www.paypal.com/cgi-bin/webscr"
-                method="post"
-                target="_top"
-              >
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick" />
                 <input
                   type="hidden"
@@ -100,29 +77,13 @@
                 />
                 <ul class="actions">
                   <li>
-                    <a
-                      href="https://github.com/pkmnct/robinhood-mint-sync-chrome"
-                      class="button primary"
-                      >View on GitHub</a
-                    >
+                    <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome" class="button primary">View on GitHub</a>
                   </li>
                   <li>
-                    <input
-                      type="submit"
-                      class="button"
-                      border="0"
-                      name="submit"
-                      value="Donate with PayPal"
-                    />
+                    <input type="submit" class="button" border="0" name="submit" value="Donate with PayPal" />
                   </li>
                 </ul>
-                <img
-                  alt=""
-                  border="0"
-                  src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                  width="1"
-                  height="1"
-                />
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
               </form>
             </div>
           </div>
@@ -133,31 +94,20 @@
           <header class="major">
             <h2>How to use the Extension</h2>
           </header>
-          <span class="image right"
-            ><img src="images/screenshot1.png" alt=""
-          /></span>
+          <span class="image right"><img src="images/screenshot1.png" alt="" /></span>
           <p>
-            The extension is very simple to use. Just visit your Mint overview
-            page to automatically initiate a sync. If you have not performed a
-            sync before, you will be directed to set up the item in Mint to
-            track your Robinhood portfolio to.
+            The extension is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before,
+            you will be directed to set up the item in Mint to track your Robinhood portfolio to.
           </p>
           <footer class="major">
             <ul class="actions">
               <li>
-                <a
-                  href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo"
-                  class="button primary"
+                <a href="https://chrome.google.com/webstore/detail/robinhood-mint-sync-for-c/mogflmdandlpjobbddhopcggkjoggpdo" class="button primary"
                   >Add to Chrome</a
                 >
               </li>
               <li>
-                <a
-                  href="https://mint.intuit.com/overview.event"
-                  target="_blank"
-                  class="button"
-                  >Go to Mint Overview</a
-                >
+                <a href="https://mint.intuit.com/overview.event" target="_blank" class="button">Go to Mint Overview</a>
               </li>
             </ul>
           </footer>
@@ -170,27 +120,19 @@
           </header>
           <h2>How does the extension work?</h2>
           <p>
-            The extension works by opening your Robinhood Account page in the
-            background to read the portfolio value. After reading that value, it
-            passes it to Mint in another new page in the background. Both of
-            these background pages will close automatically when they are done
-            with their job. You may switch to these pages while the sync is
-            being performed, but if they are closed the sync will not complete.
+            The extension works by opening your Robinhood Account page in the background to read the portfolio value. After reading that value, it passes it to
+            Mint in another new page in the background. Both of these background pages will close automatically when they are done with their job. You may
+            switch to these pages while the sync is being performed, but if they are closed the sync will not complete.
           </p>
           <p>
-            Due to how the extension gets data from Robinhood and inputs data
-            into Mint, it is possible for changes in either of these services to
-            break the functionality of the extension. If you have any issues
-            with the extension, see the
+            Due to how the extension gets data from Robinhood and inputs data into Mint, it is possible for changes in either of these services to break the
+            functionality of the extension. If you have any issues with the extension, see the
             <a href="#cta">Reporting a Problem</a> section below.
           </p>
           <h2>How do I know my information is safe?</h2>
           <p>
-            This extension is completely open source and its code is available
-            on GitHub. This means anybody can
-            <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome"
-              >review the code</a
-            >
+            This extension is completely open source and its code is available on GitHub. This means anybody can
+            <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome">review the code</a>
             and confirm that it is safe.
           </p>
         </section>
@@ -202,55 +144,38 @@
           </header>
           <p>
             If you run into any issues with the extension, please
-            <a
-              href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues"
-              >check to see if any other people are having the same issue</a
-            >
-            on GitHub. If they are not, please open a new issue. Describe in
-            detail the problem you are having when reporting an issue.
+            <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues">check to see if any other people are having the same issue</a>
+            on GitHub. If they are not, please open a new issue. Describe in detail the problem you are having when reporting an issue.
           </p>
           <footer class="major">
             <ul class="actions">
               <li>
-                <a
-                  href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues"
-                  class="button primary"
-                  >View Known Issues</a
-                >
+                <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues" class="button primary">View Known Issues</a>
               </li>
             </ul>
           </footer>
         </section>
-      </div>
+      </main>
 
       <!-- Footer -->
       <footer id="footer">
+        <h2>Version History</h2>
         <section>
-          <h2>Version History</h2>
-          <aside class="version">
-            <h4>Version 3.3.0</h4>
-            <p>
-              Fixes an issue where, if no properties had been set up on Mint,
-              extension failed to create properties. Users with margin trading
-              will now see the equity value of their stocks rather than their
-              total market value when syncing. Fixes an issue where buttons in
-              the notifications were not showing correctly.
-            </p>
-          </aside>
+          <h3>Version 3.3.0</h3>
+          <p>
+            Fixes an issue where, if no properties had been set up on Mint, extension failed to create properties. Users with margin trading will now see the
+            equity value of their stocks rather than their total market value when syncing. Fixes an issue where buttons in the notifications were not showing
+            correctly.
+          </p>
           <ul class="actions">
             <li>
               <a href="changelog.html" class="button">View Full Changelog</a>
             </li>
           </ul>
         </section>
-        <section>
-          <h2>&nbsp;</h2>
-          <aside class="version">
-            <h4>Version 3.2.0</h4>
-            <p>
-              Fixes additional bugs from 3.0.0. Introduces Debug Mode setting.
-            </p>
-          </aside>
+        <section class="secondary">
+          <h3>Version 3.2.0</h3>
+          <p>Fixes additional bugs from 3.0.0. Introduces Debug Mode setting.</p>
         </section>
         <p class="copyright">
           <a href="licenses.html">View extension and third-party licenses</a>
@@ -259,17 +184,14 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/external/jquery/jquery.min.js"></script>
-    <script src="js/external/ajlkn/jquery.scrollex.min.js"></script>
-    <script src="js/external/ajlkn/jquery.scrolly.min.js"></script>
-    <script src="js/external/ajlkn/browser.min.js"></script>
-    <script src="js/external/ajlkn/breakpoints.min.js"></script>
-    <script src="js/external/stellar/util.js"></script>
-    <script src="js/external/stellar/main.js"></script>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-118042537-2"
-    ></script>
+    <script src="external/jquery/jquery.min.js"></script>
+    <script src="external/stellar/jquery.scrollex.min.js"></script>
+    <script src="external/stellar/jquery.scrolly.min.js"></script>
+    <script src="external/stellar/browser.min.js"></script>
+    <script src="external/stellar/breakpoints.min.js"></script>
+    <script src="external/stellar/util.js"></script>
+    <script src="external/stellar/main.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118042537-2"></script>
     <script src="js/analytics.js"></script>
   </body>
 </html>
