--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/settings.css" />
+    <link rel="icon" type="image/png" href="/images/icon128.png" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -31,33 +32,21 @@
             <h2>Changelog</h2>
           </header>
           <p>
-            Enable or disable the changelog page on extension updates. This
-            changelog shows information about the new features and changes
-            introduced with the update.
+            Enable or disable the changelog page on extension updates. This changelog shows information about the new features and changes introduced with the
+            update.
           </p>
-          <input
-            type="checkbox"
-            id="setting-changelogOnUpdate"
-            name="setting-changelogOnUpdate"
-          />
-          <label for="setting-changelogOnUpdate"
-            >Display changelog on update</label
-          >
+          <input type="checkbox" id="setting-changelogOnUpdate" name="setting-changelogOnUpdate" />
+          <label for="setting-changelogOnUpdate">Display changelog on update</label>
         </section>
         <section id="triangleFix" class="main">
           <header class="major">
             <h2>Triangle Indicator Fix</h2>
           </header>
           <p>
-            In some areas of Mint, there is an expansion panel where the
-            indicator functions counterintuitively. This setting enables a fix
-            so that the indicator for the panel appears expanded when it should.
+            In some areas of Mint, there is an expansion panel where the indicator functions counterintuitively. This setting enables a fix so that the
+            indicator for the panel appears expanded when it should.
           </p>
-          <input
-            type="checkbox"
-            id="setting-fixTriangle"
-            name="setting-fixTriangle"
-          />
+          <input type="checkbox" id="setting-fixTriangle" name="setting-fixTriangle" />
           <label for="setting-fixTriangle">Triangle Indicator Fix</label>
         </section>
         <section id="debugMode" class="main">
@@ -65,15 +54,10 @@
             <h2>Debug Mode</h2>
           </header>
           <p>
-            Enables logging and disables closing of Robinhood/Mint extension
-            windows for debugging purposes. To see the logs, enable developer
-            mode in Chrome and inspect the background page of the extension.
+            Enables logging and disables closing of Robinhood/Mint extension windows for debugging purposes. To see the logs, enable developer mode in Chrome
+            and inspect the background page of the extension.
           </p>
-          <input
-            type="checkbox"
-            id="setting-debugMode"
-            name="setting-debugMode"
-          />
+          <input type="checkbox" id="setting-debugMode" name="setting-debugMode" />
           <label for="setting-debugMode">Debug Mode</label>
         </section>
       </main>
