--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="icon" type="image/png" href="/images/icon128.png" />
   </head>
 
   <body class="is-preload">
@@ -12,9 +13,7 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <span class="logo"
-          ><img src="/images/icon512.png" style="width: 128px" alt=""
-        /></span>
+        <span class="logo"><img src="/images/icon512.png" style="width: 128px" alt="" /></span>
         <h1>Robinhood Mint Sync for Chrome</h1>
         <p>Add your Robinhood portfolio value to Mint automatically.</p>
       </header>
@@ -39,27 +38,15 @@
                 <h2>Welcome</h2>
               </header>
               <p>
-                Thank you for using this extension. I work on it in my free time
-                and am glad to see so many people find it as helpful as I do. If
-                you're interested in contributing to the project, check it out
-                on GitHub.
+                Thank you for using this extension. I work on it in my free time and am glad to see so many people find it as helpful as I do. If you're
+                interested in contributing to the project, check it out on GitHub.
               </p>
               <ul class="actions special">
                 <li>
-                  <a
-                    href="https://github.com/pkmnct/robinhood-mint-sync-chrome"
-                    target="_blank"
-                    class="button primary"
-                    >View Project</a
-                  >
+                  <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome" target="_blank" class="button primary">View Project</a>
                 </li>
                 <li>
-                  <a
-                    href="https://paypal.me/pkmnct"
-                    target="_blank"
-                    class="button"
-                    >Support the Extension via Donation</a
-                  >
+                  <a href="https://paypal.me/pkmnct" target="_blank" class="button">Support the Extension via Donation</a>
                 </li>
               </ul>
             </div>
@@ -71,14 +58,10 @@
           <header class="major">
             <h2>How to use the extension</h2>
           </header>
-          <span class="image right"
-            ><img src="/images/screenshot1.png" alt=""
-          /></span>
+          <span class="image right"><img src="/images/screenshot1.png" alt="" /></span>
           <p>
-            The extension is very simple to use. Just visit your Mint overview
-            page to automatically initiate a sync. If you have not performed a
-            sync before, you will be directed to set up the item in Mint to
-            track your Robinhood portfolio to.
+            The extension is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before,
+            you will be directed to set up the item in Mint to track your Robinhood portfolio to.
           </p>
           <p>
             You can also adjust settings for the extension by viewing the
@@ -87,17 +70,10 @@
           <footer class="major">
             <ul class="actions">
               <li>
-                <a
-                  href="https://mint.intuit.com/overview.event"
-                  target="_blank"
-                  class="button primary"
-                  >Perform sync now</a
-                >
+                <a href="https://mint.intuit.com/overview.event" target="_blank" class="button primary">Perform sync now</a>
               </li>
               <li>
-                <a href="settings.html" target="_blank" class="button"
-                  >Change Settings</a
-                >
+                <a href="settings.html" target="_blank" class="button">Change Settings</a>
               </li>
             </ul>
           </footer>
@@ -110,27 +86,19 @@
           </header>
           <h2>How does the extension work?</h2>
           <p>
-            The extension works by opening your Robinhood Account page in the
-            background to read the portfolio value. After reading that value, it
-            passes it to Mint in another new page in the background. Both of
-            these background pages will close automatically when they are done
-            with their job. You may switch to these pages while the sync is
-            being performed, but if they are closed the sync will not complete.
+            The extension works by opening your Robinhood Account page in the background to read the portfolio value. After reading that value, it passes it to
+            Mint in another new page in the background. Both of these background pages will close automatically when they are done with their job. You may
+            switch to these pages while the sync is being performed, but if they are closed the sync will not complete.
           </p>
           <p>
-            Due to how the extension gets data from Robinhood and inputs data
-            into Mint, it is possible for changes in either of these services to
-            break the functionality of the extension. If you have any issues
-            with the extension, see the
+            Due to how the extension gets data from Robinhood and inputs data into Mint, it is possible for changes in either of these services to break the
+            functionality of the extension. If you have any issues with the extension, see the
             <a href="#report-problem">Reporting a Problem</a> section below.
           </p>
           <h2>How do I know my information is safe?</h2>
           <p>
-            This extension is completely open source and its code is available
-            on GitHub. This means anybody can
-            <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome"
-              >review the code</a
-            >
+            This extension is completely open source and its code is available on GitHub. This means anybody can
+            <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome">review the code</a>
             and confirm that it is safe.
           </p>
         </section>
@@ -142,22 +110,13 @@
           </header>
           <p>
             If you run into any issues with the extension, please
-            <a
-              href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues"
-              >check to see if any other people are having the same issue</a
-            >
-            on GitHub. If they are not, please open a new issue. Describe in
-            detail the problem you are having when reporting an issue.
+            <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues">check to see if any other people are having the same issue</a>
+            on GitHub. If they are not, please open a new issue. Describe in detail the problem you are having when reporting an issue.
           </p>
           <footer class="major">
             <ul class="actions">
               <li>
-                <a
-                  href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues"
-                  target="_blank"
-                  class="button primary"
-                  >View Known Issues</a
-                >
+                <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues" target="_blank" class="button primary">View Known Issues</a>
               </li>
             </ul>
           </footer>
@@ -170,11 +129,7 @@
           <h2>Version History</h2>
           <ul class="actions">
             <li>
-              <a
-                href="https://pkmnct.github.io/robinhood-mint-sync-chrome/changelog.html"
-                class="button"
-                >View Changelog</a
-              >
+              <a href="https://pkmnct.github.io/robinhood-mint-sync-chrome/changelog.html" class="button">View Changelog</a>
             </li>
           </ul>
         </section>
