--- a/changelog.html
+++ b/changelog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="external/stellar/main.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" type="image/png" href="images/icon128.png" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -33,7 +34,7 @@
               <header class="major">
                 <h2>What's new in this release</h2>
               </header>
-              <p>Additional bug fixes for issues reported from 3.0.0</p>
+              <p>Accessibility improvements</p>
             </div>
           </div>
         </section>
@@ -43,6 +44,14 @@
           <header class="major">
             <h2>Version History</h2>
           </header>
+          <div class="version">
+            <h3>Version 3.3.1</h3>
+            <h4>Bug Fixes</h4>
+            <ul>
+              <li>Increase color contrast on all text/links</li>
+              <li>Fix other accessibility issues</li>
+            </ul>
+          </div>
           <div class="version">
             <h3>Version 3.3.0</h3>
             <h4>Bug Fixes</h4>
