Mint value is unneeded

--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -78,7 +78,6 @@
           TODO: all this text. Probably a warning about not changing these values after the fact or risking data
           loss.<br />
           Robinhood Name will probably have to be the Name (First Lase) on the robinhood Account. <br />
-          Mint Name will be the key used to identify the custom property that gets updated.
         </p>
         <input type="checkbox" id="setting-multipleAccountsEnabled" name="setting-multipleAccountsEnabled" />
         <label for="setting-multipleAccountsEnabled">Allow Multiple Accounts</label>
@@ -88,12 +87,8 @@
           <template id="mutiple-accounts-input-wrapper-template">
             <div class="mutiple-accounts-input-wrapper">
               <label>
-                Robin Hood Name
+                RobinHood Account Name
                 <input required type="text" class="setting-multipleAccounts-robinHoodInput" />
-              </label>
-              <label for="setting-multipleAccounts-mintInput">
-                Mint ID
-                <input required type="text" class="setting-multipleAccounts-mintInput" />
               </label>
               <button class="multipleAccounts-delete">Delete</button>
             </div>
