Improve anchor links, add FAQs, make footers the same

--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -129,7 +129,8 @@
           <p>
             If you run into any issues with the extension, please
             <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues">check to see if any other people are having the same issue</a>
-            on GitHub. If they are not, please open a new issue. Describe in detail the problem you are having when reporting an issue.
+            on GitHub. If it has not been reported (make sure to search closed issues too), please open a new issue. Describe in detail the problem you are
+            having when reporting an issue.
           </p>
           <footer class="major">
             <ul class="actions">
@@ -143,14 +144,24 @@
 
       <!-- Footer -->
       <footer id="footer">
+        <h2>Version History</h2>
         <section>
-          <h2>Version History</h2>
-          <ul class="actions">
-            <li>
-              <a href="https://pkmnct.github.io/robinhood-mint-sync-chrome/changelog.html" class="button">View Changelog</a>
-            </li>
-          </ul>
+          <h3>Version 3.3.1</h3>
+          <p>Accessibility improvements</p>
         </section>
+        <section class="secondary">
+          <h3>Version 3.3.0</h3>
+          <p>
+            Fixes an issue where, if no properties had been set up on Mint, extension failed to create properties. Users with margin trading will now see the
+            equity value of their stocks rather than their total market value when syncing. Fixes an issue where buttons in the notifications were not showing
+            correctly.
+          </p>
+        </section>
+        <ul class="actions">
+          <li>
+            <a href="changelog.html" class="button">View Full Changelog</a>
+          </li>
+        </ul>
         <p class="copyright">
           <a href="licenses.html">View extension and third-party licenses</a>
         </p>
