--- a/public/html/licenses.html
+++ b/public/html/licenses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Robinhood Mint Sync for Chrome - Licenses</title>
+    <title>Robinhood Mint Sync - Licenses</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -13,7 +13,7 @@
       <!-- Header -->
       <header id="header">
         <h1>Licenses</h1>
-        <p>Robinhood Mint Sync for Chrome</p>
+        <p>Robinhood Mint Sync</p>
       </header>
 
       <!-- Nav -->
@@ -32,7 +32,7 @@
       <main id="main">
         <section id="extension" class="main">
           <header class="major">
-            <h2>Robinhood Mint Sync for Chrome License</h2>
+            <h2>Robinhood Mint Sync License</h2>
           </header>
           <h3>MIT License</h3>
           <p>Copyright &copy; 2018 George W. Walker</p>
