--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Robinhood Mint Sync for Chrome - Settings</title>
+    <title>Robinhood Mint Sync - Settings</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -14,7 +14,7 @@
       <!-- Header -->
       <header id="header">
         <h1>Settings</h1>
-        <p>Robinhood Mint Sync for Chrome</p>
+        <p>Robinhood Mint Sync</p>
       </header>
 
       <!-- Nav -->
