--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Robinhood Mint Sync for Chrome - Welcome</title>
+    <title>Robinhood Mint Sync - Welcome</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -14,7 +14,7 @@
       <!-- Header -->
       <header id="header" class="alt">
         <span class="logo"><img src="/images/icon512.png" style="width: 128px" alt="" /></span>
-        <h1>Robinhood Mint Sync for Chrome</h1>
+        <h1>Robinhood Mint Sync</h1>
         <p>Add your Robinhood portfolio value to Mint automatically.</p>
       </header>
 
