Remove additional Chrome references

--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -54,8 +54,8 @@
             <h2>Debug Mode</h2>
           </header>
           <p>
-            Enables logging and disables closing of Robinhood/Mint extension windows for debugging purposes. To see the logs, enable developer mode in Chrome
-            and inspect the background page of the extension.
+            Enables logging and disables closing of Robinhood/Mint extension windows for debugging purposes. To see the logs, inspect the background page of the
+            extension.
           </p>
           <input type="checkbox" id="setting-debugMode" name="setting-debugMode" />
           <label for="setting-debugMode">Debug Mode</label>
