Add a button to manually trigger initial setup

--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -60,6 +60,15 @@
           <input type="checkbox" id="setting-debugMode" name="setting-debugMode" />
           <label for="setting-debugMode">Debug Mode</label>
         </section>
+        <section id="setup" class="main">
+          <header class="major">
+            <h2>Trigger Initial Setup</h2>
+          </header>
+          <p>
+            If you need to re-setup the Mint properties, use this button. This will also force a sync. Make sure you are signed in to Robinhood and Mint first.
+          </p>
+          <a href="https://mint.intuit.com/settings.event?filter=property&setupRobinhood=true" target="_blank" class="button">Trigger Initial Setup</a>
+        </section>
       </main>
 
       <!-- Footer -->
