--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -146,16 +146,12 @@
       <footer id="footer">
         <h2>Version History</h2>
         <section>
-          <h3>Version 3.3.1</h3>
-          <p>Accessibility improvements</p>
+          <h3>Version 3.4.0</h3>
+          <p>Fixed some issues that could cause sync to fail. Add support for Firefox. Add a button to manually perform initial setup.</p>
         </section>
         <section class="secondary">
-          <h3>Version 3.3.0</h3>
-          <p>
-            Fixes an issue where, if no properties had been set up on Mint, extension failed to create properties. Users with margin trading will now see the
-            equity value of their stocks rather than their total market value when syncing. Fixes an issue where buttons in the notifications were not showing
-            correctly.
-          </p>
+          <h3>Version 3.3.1</h3>
+          <p>Accessibility improvements</p>
         </section>
         <ul class="actions">
           <li>
