Feature: Add Firefox Support (#40)
New Features:
- Now supports Firefox (Closes #37)

--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Robinhood Mint Sync for Chrome - Settings</title>
+    <title>Robinhood Mint Sync - Settings</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -14,7 +14,7 @@
       <!-- Header -->
       <header id="header">
         <h1>Settings</h1>
-        <p>Robinhood Mint Sync for Chrome</p>
+        <p>Robinhood Mint Sync</p>
       </header>
 
       <!-- Nav -->
@@ -54,8 +54,8 @@
             <h2>Debug Mode</h2>
           </header>
           <p>
-            Enables logging and disables closing of Robinhood/Mint extension windows for debugging purposes. To see the logs, enable developer mode in Chrome
-            and inspect the background page of the extension.
+            Enables logging and disables closing of Robinhood/Mint extension windows for debugging purposes. To see the logs, inspect the background page of the
+            extension.
           </p>
           <input type="checkbox" id="setting-debugMode" name="setting-debugMode" />
           <label for="setting-debugMode">Debug Mode</label>
