--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Robinhood Mint Sync for Chrome - Welcome</title>
+    <title>Robinhood Mint Sync - Welcome</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/js/external/stellar/main.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -14,7 +14,7 @@
       <!-- Header -->
       <header id="header" class="alt">
         <span class="logo"><img src="/images/icon512.png" style="width: 128px" alt="" /></span>
-        <h1>Robinhood Mint Sync for Chrome</h1>
+        <h1>Robinhood Mint Sync</h1>
         <p>Add your Robinhood portfolio value to Mint automatically.</p>
       </header>
 
@@ -146,16 +146,12 @@
       <footer id="footer">
         <h2>Version History</h2>
         <section>
-          <h3>Version 3.3.1</h3>
-          <p>Accessibility improvements</p>
+          <h3>Version 3.4.0</h3>
+          <p>Fixed some issues that could cause sync to fail. Add support for Firefox. Add a button to manually perform initial setup.</p>
         </section>
         <section class="secondary">
-          <h3>Version 3.3.0</h3>
-          <p>
-            Fixes an issue where, if no properties had been set up on Mint, extension failed to create properties. Users with margin trading will now see the
-            equity value of their stocks rather than their total market value when syncing. Fixes an issue where buttons in the notifications were not showing
-            correctly.
-          </p>
+          <h3>Version 3.3.1</h3>
+          <p>Accessibility improvements</p>
         </section>
         <ul class="actions">
           <li>
