--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -85,10 +85,8 @@
             <h2>Multiple Accounts</h2>
           </header>
           <p>
-            If you would like to enable syncing for multiple accounts, you can enable it here. <br />
-            Note that this will require you to delete any propeties created before turning on this feature. <br />
-            Similarly, turning off this feature will require you to delete any properties created while it was on. <br />
-            Whichever account is logged in at the time of syncing will be updated if found. Only one account can update at a time.
+            Multiple account support allows you to sync more than one Robinhood account to a single Mint account. Whichever Robinhood account you currently have
+            signed in on your browser will be synced to Mint. To update another account, sign out of Robinhood and sign in with the account you want to sync.
           </p>
           <input type="checkbox" id="setting-multipleAccountsEnabled" name="setting-multipleAccountsEnabled" />
           <label for="setting-multipleAccountsEnabled">Allow Multiple Accounts</label>
